# backend/pkg/generated/goserver/api_unprocessed_transactions.go
@@ -62,6 +62,11 @@ func (c *UnprocessedTransactionsAPIController) Routes() Routes {
 			"/v1/unprocessedTransactions/{id}/convert",
 			c.ConvertUnprocessedTransaction,
 		},
+		"GetUnprocessedTransaction": Route{
+			strings.ToUpper("Get"),
+			"/v1/unprocessedTransactions/{id}",
+			c.GetUnprocessedTransaction,
+		},
 		"DeleteUnprocessedTransaction": Route{
 			strings.ToUpper("Delete"),
 			"/v1/unprocessedTransactions/{id}",
@@ -106,6 +111,24 @@ func (c *UnprocessedTransactionsAPIController) ConvertUnprocessedTransaction(w h
 		return
 	}
 	result, err := c.service.ConvertUnprocessedTransaction(r.Context(), idParam, transactionNoIdParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	_ = EncodeJSONResponse(result.Body, &result.Code, w)
+}
+
+// GetUnprocessedTransaction - get unprocessed transaction
+func (c *UnprocessedTransactionsAPIController) GetUnprocessedTransaction(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	idParam := params["id"]
+	if idParam == "" {
+		c.errorHandler(w, r, &RequiredError{"id"}, nil)
+		return
+	}
+	result, err := c.service.GetUnprocessedTransaction(r.Context(), idParam)
 	// If an error occurred, encode the error with the status code
 	if err != nil {
 		c.errorHandler(w, r, err, &result)
