# backend/pkg/generated/goserver/api_unprocessed_transactions_service.go
@@ -23,6 +23,8 @@ type UnprocessedTransactionsAPIService interface {
 	GetUnprocessedTransactions(ctx context.Context) (ImplResponse, error)
 	// ConvertUnprocessedTransaction - convert unprocessed transactions into normal transaction
 	ConvertUnprocessedTransaction(ctx context.Context, id string, transactionNoId TransactionNoId) (ImplResponse, error)
+	// GetUnprocessedTransaction - get unprocessed transaction
+	GetUnprocessedTransaction(ctx context.Context, id string) (ImplResponse, error)
 	// DeleteUnprocessedTransaction - delete unprocessed transaction
 	DeleteUnprocessedTransaction(ctx context.Context, id string, duplicateOf string) (ImplResponse, error)
 }
@@ -58,6 +60,17 @@ func (s *UnprocessedTransactionsAPIServiceImpl) ConvertUnprocessedTransaction(ct
 	// return Response(200, Transaction{}), nil
 
 	return Response(http.StatusNotImplemented, nil), errors.New("ConvertUnprocessedTransaction method not implemented")
+}
+
+// GetUnprocessedTransaction - get unprocessed transaction
+func (s *UnprocessedTransactionsAPIServiceImpl) GetUnprocessedTransaction(ctx context.Context, id string) (ImplResponse, error) {
+	// TODO - update GetUnprocessedTransaction with the required logic for this service method.
+	// Add api_unprocessed_transactions_service.go to the .openapi-generator-ignore to avoid overwriting this service implementation when updating open api generation.
+
+	// TODO: Uncomment the next line to return response Response(200, UnprocessedTransaction{}) or use other options such as http.Ok ...
+	// return Response(200, UnprocessedTransaction{}), nil
+
+	return Response(http.StatusNotImplemented, nil), errors.New("GetUnprocessedTransaction method not implemented")
 }
 
 // DeleteUnprocessedTransaction - delete unprocessed transaction
